<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <prerequisites>
        <maven>3.0.5</maven>
    </prerequisites>

    <groupId>de.fraunhofer.iosb.ilt.FROST-Server</groupId>
    <artifactId>FROST-ServerParent</artifactId>
    <version>1.10-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>FROST-ServerParent</name>
    <description>A server implementation of the OGC SensorThings API.</description>
    <url>https://github.com/FraunhoferIOSB/FROST-Server</url>
    <inceptionYear>2016</inceptionYear>

    <modules>
        <module>FROST-Server.MQTTP</module>
        <module>FROST-Server.HTTP</module>
        <module>FROST-Server.HTTP.Common</module>
        <module>FROST-Server.MQTT</module>
        <module>FROST-Server.MQTT.Moquette</module>
        <module>FROST-Server.Core</module>
        <module>FROST-Server.SQLjooq</module>
        <module>FROST-Server.SQL</module>
        <module>FROST-Server.SQL.PGLong</module>
        <module>FROST-Server.SQL.PGString</module>
        <module>FROST-Server.SQL.PGUuid</module>
        <module>FROST-Server.Auth.Basic</module>
        <module>FROST-Server.Auth.Keycloak</module>
    </modules>

    <properties>
        <annotation-api.version>1.3.1</annotation-api.version>
        <codegen.version>0.6.8-uuid</codegen.version>
        <commons-io.version>2.6</commons-io.version>
        <commons-lang3.version>3.7</commons-lang3.version>
        <git-commit-id-plugin.version>2.2.5</git-commit-id-plugin.version>
        <geojson-jackson.version>1.6</geojson-jackson.version>
        <geolatte-common.version>0.8</geolatte-common.version>
        <guava.version>25.0-jre</guava.version>
        <httpclient.version>4.5.2</httpclient.version>
        <dbcp2.version>2.1</dbcp2.version>
        <jackson.version>2.9.8</jackson.version>
        <javacc.version>7.0.4</javacc.version>
        <javacc-maven-plugin.version>2.6</javacc-maven-plugin.version>
        <jodatime.version>2.9.2</jodatime.version>
        <json-patch.version>1.9</json-patch.version>
        <junit.version>4.12</junit.version>
        <keycloak.version>4.6.0.Final</keycloak.version>
        <liquibase.version>3.4.2</liquibase.version>
        <logback.version>1.1.7</logback.version>

        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
        <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
        <maven-war-plugin.version>3.2.2</maven-war-plugin.version>

        <paho.version>1.2.0</paho.version>
        <postgis.version>2.3.0</postgis.version>
        <postgres.version>42.2.5</postgres.version>
        <querydsl.version>4.1.4</querydsl.version>
        <slf4j-api.version>1.7.20</slf4j-api.version>

        <javax-activation.version>1.1.1</javax-activation.version>
        <dockerfile-maven-plugin.version>1.3.7</dockerfile-maven-plugin.version>

        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.release>8</maven.compiler.release>

        <bintray.subject>fraunhoferiosb</bintray.subject>
        <bintray.repo>Maven</bintray.repo>
        <bintray.package>FROST-Server</bintray.package>
    </properties>

    <licenses>
        <license>
            <name>GNU Lesser General Public License v3, or (at your option) any later version</name>
            <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
            <comments>For more information see the LICENSE.txt included with the sources.</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Hylke van der Schaaf</name>
            <email>hylke.vanderschaaf@iosb.fraunhofer.de</email>
            <organization>Fraunhofer IOSB</organization>
            <organizationUrl>https://www.iosb.fraunhofer.de</organizationUrl>
        </developer>
    </developers>

    <organization>
        <name>Fraunhofer IOSB</name>
        <url>http://iosb.fraunhofer.de</url>
    </organization>

    <scm>
        <connection>scm:git:git://github.com/FraunhoferIOSB/SensorThingsServer.git</connection>
        <developerConnection>scm:git:ssh://github.com:FraunhoferIOSB/SensorThingsServer.git</developerConnection>
        <url>https://github.com/FraunhoferIOSB/FROST-Server/tree/master</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/FraunhoferIOSB/FROST-Server/issues</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>fraunhoferiosb-Maven</id>
            <url>https://api.bintray.com/maven/${bintray.subject}/${bintray.repo}/${bintray.package}/;publish=1</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>bintray</id>
            <url>https://jcenter.bintray.com</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>bintray-fraunhoferiosb-Maven</id>
            <url>https://dl.bintray.com/fraunhoferiosb/Maven</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>bintray-fraunhoferiosb-Maven</id>
            <url>https://dl.bintray.com/fraunhoferiosb/Maven</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <profiles>
        <profile>
            <id>SUREFIRE-1588</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
            </properties>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven-war-plugin.version}</version>
                    <configuration>
                        <archiveClasses>true</archiveClasses>
                        <attachClasses>true</attachClasses>
                        <failOnMissingWebXml>true</failOnMissingWebXml>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <excludePackageNames>de.fraunhofer.iosb.ilt.sta.parser.path:de.fraunhofer.iosb.ilt.sta.parser.query</excludePackageNames>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
            </plugin>
        </plugins>
    </build>

</project>
